fix: DEV-2267: Truncate comments (#609)
* Properly truncate long comments

* Prevent item selection on collapse/expand

* Comment

--- a/src/components/CurrentEntity/AnnotationHistory.styl
+++ b/src/components/CurrentEntity/AnnotationHistory.styl
@@ -60,10 +60,19 @@
 
   &__comment
     padding-top 2px
-    white-space pre-wrap
 
-    &::before
-      content attr(data-reason)
+    &-content
+      white-space pre-wrap
+
+      &::before
+        content attr(data-reason)
+
+    &_collapsed &-content
+      display: -webkit-box;
+      -webkit-line-clamp: 3;
+      -webkit-box-orient: vertical;
+      overflow: hidden;
+      text-overflow: ellipsis;
 
   &__history-icon
     width 24px
@@ -73,6 +82,10 @@
     padding-top 6px
     align-items flex-start
     grid-template-columns 24px 1fr
+
+  &__collapse-comment
+    margin-top 3px
+    color $accent_color
 
   &:not(&_inline)
     margin 0 -10px
